--- a/application.yaml
+++ b/application.yaml
@@ -9,7 +9,7 @@ spec:
   source:
     repoURL: https://github.com/Laheij/K8s_boot.git
     targetRevision: HEAD
-    path: dev
+    path: nginx
   destination: 
     server: https://kubernetes.default.svc
     namespace: test
