--- a/nginx/nginx.yaml
+++ b/nginx/nginx.yaml
@@ -18,3 +18,10 @@ spec:
         image: nginx:latest
         ports:
         - containerPort: 80
+        volumeMounts:
+          - name: local
+            mountPath: /usr/share/nginx/html
+      volumeMounts:
+        - name: local
+          hostPath:
+            path: /user/share/nginx/html
