--- a/nginx/service.yaml
+++ b/nginx/service.yaml
@@ -6,8 +6,9 @@ metadata:
 spec:
   selector:
     app: nginx
+  type: NodePort
   ports:
-  - name: http
+  - protocol: TCP
     port: 80
     targetPort: 80
-  type: NodePort
+    nodePort: 30080 
